ligolang/src/test/contracts/negative/vars_consts/assign_const_param.ligo
function foo(const x : int) : int is
  block {
    x := 4;
  } with x
